Fixed the issue where some text was being cut off for the about section

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -42,13 +42,17 @@
     gap: 10px;
     &-line {
       width: 100%;
-      height: 4rem;
+      height: auto;
       position: relative;
       overflow: hidden;
       // clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 
-      &:first-of-type {
-        height: 2.5rem;
+      div {
+        // opacity: 1;
+        pointer-events: none;
+        letter-spacing: 1px;
+        word-spacing: 1px;
+        font-size: 1.2rem;
       }
 
       span {
@@ -57,45 +61,6 @@
         font-size: 1.2rem;
         position: absolute;
         color: #fff;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 762px) {
-  .about {
-    &__paragraph {
-      &-line {
-        height: 5.5rem;
-
-        &:first-of-type {
-          height: 4rem;
-        }
-      }
-    }
-  }
-}
-@media screen and (max-width: 600px) {
-  .about {
-    &__paragraph {
-      &-line {
-        height: 8rem;
-
-        &--tall {
-          height: 10rem;
-        }
-      }
-    }
-  }
-}
-@media screen and (max-width: 350px) {
-  .about {
-    &__paragraph {
-      &-line {
-        height: 8.5rem;
-        &:first-of-type {
-          height: 5.5rem;
-        }
       }
     }
   }
